--- a/manifest.json
+++ b/manifest.json
@@ -10,5 +10,14 @@
     }
 	],
 	
-	"web_accessible_resources": ["jquery.js", "autocomplete.js", "stavklassobject.js", "stavklass.css", "opacity.png", "loading.gif", "vk.js"]
+	"web_accessible_resources": [
+								 "jquery.js", 
+								 "autocomplete.js", 
+								 "scrollock.js",
+								 "stavklassobject.js", 
+								 "stavklass.css", 
+								 "opacity.png", 
+								 "loading.gif", 
+								 "vk.js"
+								 ]
 }
