--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,7 @@
 	"manifest_version": 2,
 	"name": "СТАВЬ КЛАСС!",
 	"version": "0.1",
+	"icons": {"128": "stavklass-icon128.png"},
 	
 	 "content_scripts": [
     {
