--- a/manifest.json
+++ b/manifest.json
@@ -19,6 +19,7 @@
 								 "stavklass.css", 
 								 "opacity.png", 
 								 "loading.gif", 
+								 "stavklass-attachicon.png",
 								 "vk.js"
 								 ]
 }
